// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorIndicator matches snapshot (checked) 1`] = `
<div
  className="ColorIndicator-sc-1w5zl7g-2 dojCyw"
>
  <svg
    aria-hidden="true"
    className="ColorIndicator__CheckIcon-sc-1w5zl7g-0 Lufbl StyledIconBase-sc-bdy9j4 cCvWXa"
    fill="currentColor"
    focusable="false"
    viewBox="0 0 512 512"
  >
    <path
      d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
      fill="currentColor"
    />
  </svg>
  <span
    className="ColorIndicator__FocusedStyle-sc-1w5zl7g-1 gcsHaO"
    style={
      Object {
        "focused": "#fed200",
        "label": "yellow",
        "passive": "#ffff8a",
      }
    }
  />
</div>
`;

exports[`ColorIndicator matches snapshot 1`] = `
<div
  className="ColorIndicator-sc-1w5zl7g-2 HsETE"
>
  <svg
    aria-hidden="true"
    className="ColorIndicator__CheckIcon-sc-1w5zl7g-0 Lufbl StyledIconBase-sc-bdy9j4 cCvWXa"
    fill="currentColor"
    focusable="false"
    viewBox="0 0 512 512"
  >
    <path
      d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
      fill="currentColor"
    />
  </svg>
  <span
    className="ColorIndicator__FocusedStyle-sc-1w5zl7g-1 gcsHaO"
    style={
      Object {
        "focused": "#fed200",
        "label": "yellow",
        "passive": "#ffff8a",
      }
    }
  />
</div>
`;
